# evo-device-audio

./: Cargo.toml  Cross.toml  DEVELOPING.md
.github/workflows/: build.yml
crates/evo-device-audio-distribution/: Cargo.toml
crates/evo-device-audio-distribution/src/: main.rs
crates/evo-device-audio-shared/: Cargo.toml
crates/evo-device-audio-shared/src/: audio_ui_pack.rs  lib.rs  transition_envelope.rs
crates/evo-multiroom/: Cargo.toml
crates/evo-multiroom/src/: election.rs  lib.rs  role_store.rs  substrate_adapter.rs
plugins/org.evoframework.artwork.local/: Cargo.toml  manifest.oop.toml  manifest.toml  privileges.yaml
plugins/org.evoframework.artwork.local/src/: lib.rs
plugins/org.evoframework.composition.alsa/: Cargo.toml  manifest.oop.toml  manifest.toml  privileges.yaml
plugins/org.evoframework.composition.alsa/src/: lib.rs
plugins/org.evoframework.delivery.alsa/: Cargo.toml  manifest.oop.toml  manifest.toml  privileges.yaml
plugins/org.evoframework.delivery.alsa/data/: alsa-cards.toml
plugins/org.evoframework.delivery.alsa/src/: alsa_cards.rs  lib.rs  options_render.rs  output_enumeration.rs
plugins/org.evoframework.hardware.audio-config/: Cargo.toml  manifest.oop.toml  manifest.toml  privileges.yaml
plugins/org.evoframework.hardware.audio-config/data/: dsp-control-pool.toml  evo-catalog.toml
plugins/org.evoframework.hardware.audio-config/data/import/: volumio-dac-dsp.json
plugins/org.evoframework.hardware.audio-config/examples/: regen_evo_catalog.rs
plugins/org.evoframework.hardware.audio-config/src/: amixer_subprocess.rs  dacs.rs  dsp.rs  dsp_pool.rs  evo_catalog.rs  import.rs  lib.rs  modder.rs  provider.rs  provider_pi.rs  provider_rockchip.rs  verify.rs
plugins/org.evoframework.metadata.local/: Cargo.toml  manifest.oop.toml  manifest.toml  privileges.yaml
plugins/org.evoframework.metadata.local/src/: lib.rs
plugins/org.evoframework.multiroom.evo-native/: Cargo.toml  manifest.oop.toml  manifest.toml
plugins/org.evoframework.multiroom.evo-native/src/: lib.rs
plugins/org.evoframework.network/: manifest.oop.toml  manifest.toml  privileges.yaml
plugins/org.evoframework.network.nm/src/: presets.rs  reconcile.rs
plugins/org.evoframework.network/src/: lib.rs
plugins/org.evoframework.playback.mpd/: Cargo.toml  manifest.oop.toml  manifest.toml  privileges.yaml
plugins/org.evoframework.playback.mpd/src/: envelope_subscriber.rs  lib.rs  playback_supervisor.rs
plugins/org.evoframework.playback.mpd/src/playback_supervisor/: actor.rs
plugins/org.evoframework.playback.options/: Cargo.toml  manifest.oop.toml  manifest.toml  privileges.yaml
plugins/org.evoframework.playback.options/src/: lib.rs  transition.rs
plugins/org.evoframework.system.power/: Cargo.toml  manifest.oop.toml  manifest.toml  privileges.yaml
plugins/org.evoframework.system.power/src/: lib.rs
scripts/preflight/: check-catalogue-schemas-alignment.sh
