[package]
name = "evo-device-audio-distribution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference audio-domain steward binary for the evo framework. Composes the evo-core steward with the evo-device-audio plugin set in-process, producing a single binary that the validation distribution + downstream vendor distributions can deploy or extend."

[[bin]]
name = "evo-device-audio"
path = "src/main.rs"

[dependencies]
# The evo-core steward crate provides `evo::run` (the boot
# entrypoint), `AdmissionEngine` (in-process plugin admission
# surface), `StewardConfig` (the parsed `evo.toml`), and
# `cli::Args` (CLI parser). The evo-plugin-sdk path-dep on
# the workspace gives us the `Manifest` type for in-process
# admission.
evo = { path = "../../../evo-core-eng/crates/evo" }
# evo-multiroom hosts the source-host election runtime that
# was previously inlined in the framework's `evo` crate. The
# framework reads election state through the
# `evo_primitives::SharedElectionState` trait-object handle; a
# distribution that ships multi-room (this one) constructs the
# concrete `ElectionRuntime` in its `RuntimeSetup` closure and
# swaps it into the handle. The framework crate itself has no
# production dep on this crate — the one-way edge is what
# enforces the framework / domain separation at the build
# system level.
evo-multiroom = { path = "../evo-multiroom" }
evo-primitives = { path = "../../../evo-core-eng/crates/evo-primitives" }
evo-plugin-sdk = { workspace = true }
evo-device-audio-shared = { path = "../evo-device-audio-shared" }

# Plugin set this distribution links in-process. Each plugin
# crate exports its public Plugin type and the embedded
# `MANIFEST_TOML` constant; the distribution's admission setup
# parses each manifest and admits the plugin.
#
# Compile-link admission is the current shape. Per the framework's
# documented architecture (PLUGIN_PACKAGING.md §1+§3), plugins
# admit through four equal paths: compile-link, cdylib, OOP
# binary, WASM. Compile-link is structurally incompatible with
# the "install / remove / update without steward restart"
# property the framework promises; full per-plugin lifecycle
# requires migrating each plugin to a runtime-loadable artefact
# (OOP or cdylib). This distribution carries the compile-link
# shape for the reference plugin set until each plugin moves
# to a runtime-loadable shipping form.
# `org-evoframework-playback-options` is no longer a
# production dep of the distribution binary — it migrated to
# out-of-process shipping form. Its wire binary is cross-built
# independently via the deploy script and the plugin admits
# through framework Phase 2 discovery from
# `/opt/evo/plugins/org.evoframework.playback.options/`.
# Workspace membership keeps it cross-buildable from the
# device repo.
#
# `org-evoframework-composition-alsa`,
# `org-evoframework-delivery-alsa`, and
# `org-evoframework-multiroom-evo-native` REMAIN production
# deps today because their plugins consume framework audio
# data-plane handles (`audio_routing`, `audio_plane`,
# `multiroom_substrate`) at `load()` time, and the
# framework's OOP admission path does not yet wire-proxy
# those handles to subprocess plugins. Each plugin's wire
# binary + manifest.oop.toml is scaffolded in-tree; the
# migration moves to Phase 2 once the framework's OOP path
# provisions audio + multi-room handles across the
# subprocess boundary.
#
# `org-evoframework-playback-mpd` remains compile-link
# admitted today: it is a warden + respondent combined
# plugin; the SDK's `run_oop` helper takes a respondent
# only, `run_oop_warden` takes a warden only, and there is
# no combined `run_oop_warden_with_respondent` entry point
# yet. mpd migrates once the SDK gains the combined entry
# point.
org-evoframework-composition-alsa = { path = "../../plugins/org.evoframework.composition.alsa" }
org-evoframework-delivery-alsa = { path = "../../plugins/org.evoframework.delivery.alsa" }
org-evoframework-multiroom-evo-native = { path = "../../plugins/org.evoframework.multiroom.evo-native" }
org-evoframework-playback-mpd = { path = "../../plugins/org.evoframework.playback.mpd" }
# `org-evoframework-artwork-local` is no longer a production
# dep of the distribution binary — it migrated to
# out-of-process shipping form. The wire binary is
# cross-built independently via the deploy script and the
# plugin admits through framework Phase 2 discovery from
# `/opt/evo/plugins/org.evoframework.artwork.local/`.
# Workspace membership keeps it cross-buildable from the
# device repo.

# Async runtime and CLI parser surfaces shared with the
# steward.
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
# Parse the multi-room plugin's TOML at the post-admission
# hook so the audio topology can mirror the operator-declared
# role (source-host vs receiver/auto). Single source of truth
# is the plugin's TOML; this dep is how the distribution reads
# it.
toml = { workspace = true }

[features]
default = []
# Cross-builds for target hardware enable this feature to
# pull in the libasound-backed AlsaPcm substrate path inside
# the still-compile-link-admitted composition.alsa and
# multiroom.evo-native plugins. Once those plugins move to
# OOP shipping form (gated on the framework's OOP admission
# path provisioning audio handles across the subprocess
# boundary), the deploy script will pass `--features
# alsa-substrate` directly to each plugin's wire-binary
# cross-build via the `OOP_PLUGINS` features column and this
# passthrough retires.
alsa-substrate = [
    "org-evoframework-composition-alsa/alsa-substrate",
    "org-evoframework-multiroom-evo-native/alsa-substrate",
]

[lints]
workspace = true
