[package]
name = "evo-device-audio-distribution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference audio-domain steward binary for the evo framework. Composes the evo-core steward with the evo-device-audio plugin set in-process, producing a single binary that the validation distribution + downstream vendor distributions can deploy or extend."

[[bin]]
name = "evo-device-audio"
path = "src/main.rs"

[dependencies]
# The evo-core steward crate provides `evo::run` (the boot
# entrypoint), `AdmissionEngine` (in-process plugin admission
# surface), `StewardConfig` (the parsed `evo.toml`), and
# `cli::Args` (CLI parser). The evo-plugin-sdk path-dep on
# the workspace gives us the `Manifest` type for in-process
# admission.
evo = { path = "../../../evo-core-eng/crates/evo" }
# evo-multiroom hosts the source-host election runtime that
# was previously inlined in the framework's `evo` crate. The
# framework reads election state through the
# `evo_primitives::SharedElectionState` trait-object handle; a
# distribution that ships multi-room (this one) constructs the
# concrete `ElectionRuntime` in its `RuntimeSetup` closure and
# swaps it into the handle. The framework crate itself has no
# production dep on this crate — the one-way edge is what
# enforces the framework / domain separation at the build
# system level.
evo-multiroom = { path = "../evo-multiroom" }
evo-primitives = { path = "../../../evo-core-eng/crates/evo-primitives" }
evo-plugin-sdk = { workspace = true }
evo-device-audio-shared = { path = "../evo-device-audio-shared" }

# Plugin set this distribution links in-process. Each plugin
# crate exports its public Plugin type and the embedded
# `MANIFEST_TOML` constant; the distribution's admission setup
# parses each manifest and admits the plugin.
#
# Compile-link admission is the current shape. Per the framework's
# documented architecture (PLUGIN_PACKAGING.md §1+§3), plugins
# admit through four equal paths: compile-link, cdylib, OOP
# binary, WASM. Compile-link is structurally incompatible with
# the "install / remove / update without steward restart"
# property the framework promises; full per-plugin lifecycle
# requires migrating each plugin to a runtime-loadable artefact
# (OOP or cdylib). This distribution carries the compile-link
# shape only for plugins whose framework-side OOP transport is
# still landing; everything else ships through Phase 2 discovery.
#
# Out-of-process today (no longer compile-linked here):
#   * `org-evoframework-artwork-local`
#   * `org-evoframework-network`
#   * `org-evoframework-metadata-local`
#   * `org-evoframework-playback-options`
#   * `org-evoframework-composition-alsa`
#   * `org-evoframework-delivery-alsa`
#   * `org-evoframework-playback-mpd`
#
# Each ships a wire binary + `manifest.oop.toml`; the deploy
# script (`dist/scripts/deploy-distribution.sh`) cross-builds
# the wire binary, signs the bundle, and stages it under
# `/opt/evo/plugins/<name>/`. Workspace membership keeps them
# cross-buildable from this repo.
#
# `org-evoframework-multiroom-evo-native` REMAINS a production
# dep today because the plugin consumes
# `LoadContext::audio_plane` (and `multiroom_substrate`) at
# load() time, and the framework's OOP admission path does
# not yet wire-proxy those handles to subprocess plugins.
# `AudioRouting` itself is now wire-proxied — multiroom's
# remaining gating is the high-frequency audio-frame fan-out
# surface. The wire binary + OOP manifest are scaffolded
# in-tree; the migration lands once that handle has a sound
# cross-process transport.
org-evoframework-multiroom-evo-native = { path = "../../plugins/org.evoframework.multiroom.evo-native" }

# Async runtime and CLI parser surfaces shared with the
# steward.
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
# Parse the multi-room plugin's TOML at the post-admission
# hook so the audio topology can mirror the operator-declared
# role (source-host vs receiver/auto). Single source of truth
# is the plugin's TOML; this dep is how the distribution reads
# it.
toml = { workspace = true }

[features]
default = []
# Cross-builds for target hardware enable this feature to
# pull in the libasound-backed AlsaPcm substrate path inside
# the still-compile-link-admitted multiroom.evo-native
# plugin. composition.alsa and delivery.alsa have moved to
# OOP shipping form; the deploy script passes
# `--features alsa-substrate` directly to their wire-binary
# cross-builds via the `OOP_PLUGINS` features column. Once
# multiroom.evo-native also moves to OOP shipping form
# (gated on the framework's OOP admission path provisioning
# audio_plane + multiroom_substrate across the subprocess
# boundary), this passthrough retires.
alsa-substrate = [
    "org-evoframework-multiroom-evo-native/alsa-substrate",
]

[lints]
workspace = true
