[package]
name = "evo-device-audio-distribution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference audio-domain steward binary for the evo framework. Composes the evo-core steward with the evo-device-audio plugin set in-process, producing a single binary that the validation distribution + downstream vendor distributions can deploy or extend."

[[bin]]
name = "evo-device-audio"
path = "src/main.rs"

[dependencies]
# The evo-core steward crate provides `evo::run` (the boot
# entrypoint), `AdmissionEngine` (in-process plugin admission
# surface), `StewardConfig` (the parsed `evo.toml`), and
# `cli::Args` (CLI parser). The evo-plugin-sdk path-dep on
# the workspace gives us the `Manifest` type for in-process
# admission.
evo = { path = "../../../evo-core-eng/crates/evo" }
# evo-multiroom hosts the source-host election runtime that
# was previously inlined in the framework's `evo` crate. The
# framework reads election state through the
# `evo_primitives::SharedElectionState` trait-object handle; a
# distribution that ships multi-room (this one) constructs the
# concrete `ElectionRuntime` in its `RuntimeSetup` closure and
# swaps it into the handle. The framework crate itself has no
# production dep on this crate — the one-way edge is what
# enforces the framework / domain separation at the build
# system level.
evo-multiroom = { path = "../evo-multiroom" }
evo-primitives = { path = "../../../evo-core-eng/crates/evo-primitives" }
evo-plugin-sdk = { workspace = true }
evo-device-audio-shared = { path = "../evo-device-audio-shared" }

# Plugin set this distribution links in-process. Each plugin
# crate exports its public Plugin type and the embedded
# `MANIFEST_TOML` constant; the distribution's admission setup
# parses each manifest and admits the plugin.
#
# Compile-link admission is the current shape. Per the framework's
# documented architecture (PLUGIN_PACKAGING.md §1+§3), plugins
# admit through four equal paths: compile-link, cdylib, OOP
# binary, WASM. Compile-link is structurally incompatible with
# the "install / remove / update without steward restart"
# property the framework promises; full per-plugin lifecycle
# requires migrating each plugin to a runtime-loadable artefact
# (OOP or cdylib). This distribution carries the compile-link
# shape only for plugins whose framework-side OOP transport is
# still landing; everything else ships through Phase 2 discovery.
#
# Every reference-distribution plugin (artwork.local, network,
# metadata.local, playback.options, composition.alsa,
# delivery.alsa, playback.mpd, multiroom.evo-native) now ships
# out-of-process. The deploy script
# (`dist/scripts/deploy-distribution.sh`) cross-builds each
# wire binary, signs the bundle, and stages it under
# `/opt/evo/plugins/<name>/`. Workspace membership keeps them
# cross-buildable from this repo without producing a
# compile-link path in the distribution binary itself. Vendor
# builds that want compile-link can re-add specific plugin
# crates as path dependencies.

# Async runtime and CLI parser surfaces shared with the
# steward.
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
# Parse the multi-room plugin's TOML at the post-admission
# hook so the audio topology can mirror the operator-declared
# role (source-host vs receiver/auto). Single source of truth
# is the plugin's TOML; this dep is how the distribution reads
# it.
toml = { workspace = true }

[features]
default = []
# The `alsa-substrate` feature is retained as a no-op for
# backwards compatibility with vendor distributions that
# enable it at workspace level. Every plugin that used to
# consume this feature now ships OOP; the deploy script
# passes `--features alsa-substrate` directly to each
# wire-binary cross-build via the `OOP_PLUGINS` features
# column.
alsa-substrate = []

[lints]
workspace = true
