[package]
name = "org-evoframework-system-power"
# Keep in sync with manifest.toml [plugin].version and PluginIdentity in describe().
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Framework-reserved system.power plugin. Stocks the system.power shelf with reboot_device and power_off_device verbs gated at the framework dispatcher's per-verb capability gate (step_up:system_admin). Invokes systemctl reboot|poweroff via a narrow EVO_SYSTEM_POWER sudoers grant."

[lib]
path = "src/lib.rs"

# Out-of-process wire binary cross-built by `dist/scripts/deploy-distribution.sh`
# and staged under `/opt/evo/plugins/org.evoframework.system.power/`; the
# framework's Phase-2 discovery walks the search root at boot and admits the
# bundle.
[[bin]]
name = "system-power-wire"
path = "src/bin/system-power-wire.rs"

[dependencies]
anyhow = { workspace = true }
evo-plugin-sdk = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[lints]
workspace = true
